feature/desafio-etapa1: Implementado CRUD de usuários e autenticação de requisição

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=challange
+spring.application.name=challenge
+
+#SECRET - (Deve ser Criada nas variáveis de ambiente)
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+#POSTGRES CONNECTION
+spring.datasource.url=jdbc:postgresql://localhost:5432/ronsani_challenge_db
+spring.datasource.username=postgres
+spring.datasource.password=pass@123
+spring.datasource.driver-class-name=org.postgresql.Driver
