--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=challenge
 
-#SECRET - (Deve ser Criada nas variáveis de ambiente)
+#SECRET - (Deve ser Criada nas variaveis de ambiente)
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 #POSTGRES CONNECTION
-spring.datasource.url=jdbc:postgresql://localhost:5432/ronsani_challenge_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/challenge_db
 spring.datasource.username=postgres
 spring.datasource.password=pass@123
 spring.datasource.driver-class-name=org.postgresql.Driver
